publish: fixes home video text wrapping
generated from commit 1b302ca2a77e951f6050a77e75eaef7d7c53b289

--- a/css/main.css
+++ b/css/main.css
@@ -191,7 +191,6 @@ body {
       height: 100%; }
   #project .home-video-wrapper {
     width: 100%;
-    height: 100%;
     float: none;
     max-width: 610px;
     margin: 0 auto; }
